--- a/examples/docker-compose.yaml
+++ b/examples/docker-compose.yaml
@@ -1,27 +1,42 @@
-version: '3.6'
-
-# example docker-compose which connects our local node container to the prod
-# database which sits in a traditional datacentre via an SSH tunnel
+version: "3.9"
 services:
-  
-  node:
-    image: node:latest
+  sshtunnel:
+    container_name: ssh-tunnel
+    build: ..
+    restart: unless-stopped
+    depends_on:
+      - nginx-hello
+      - openssh-server
     volumes:
-      - ./app:/app
-    links:
-      - dbtunnel
-
-  dbtunnel:
-    image: jujhars13/docker-ssh-tunnel
-    restart: always
-    expose:
-      - "3306/tcp"
+      - ./ssh/id_rsa:/ssh_key/id_rsa:ro \
     environment:
-      - LOCAL_PORT=3306
-      - REMOTE_PORT=3306
-      - REMOTE_SERVER_IP=10.10.36.74
-      - SSH_BASTION_HOST=24.342.228.122
-      - SSH_USER=dbtunnel
-      - SSH_PORT=22
+      - SSH_PORT=2222
+      - SSH_USER=proxy
+      - CONTAINER_IP=nginx-hello
+      - CONTAINER_PORT=80
+      - REMOTE_IP=openssh-server
+      - REMOTE_PORT=8080
+
+  nginx-hello:
+    container_name: nginx-hello
+    image: nginxdemos/hello
+
+  openssh-server:
+    image: lscr.io/linuxserver/openssh-server:latest
+    container_name: openssh-server
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Etc/UTC
+      - PUBLIC_KEY_FILE=/tmp/id_rsa.pub
+      - USER_NAME=proxy
+      - DOCKER_MODS=linuxserver/mods:openssh-server-ssh-tunnel # important if you're using linuxserver/openssh as a reverse proxy
     volumes:
-      - ~/.ssh/example/dbtunnel:/ssh_key/id_rsa:ro
+      - ./ssh/id_rsa.pub:/tmp/id_rsa.pub:ro \
+    ports:
+      - 8080:8080
+    restart: unless-stopped
+
+networks:
+  default:
+    driver: bridge
