--- a/examples/docker-compose.yaml
+++ b/examples/docker-compose.yaml
@@ -14,7 +14,8 @@ services:
       - SSH_USER=proxy
       - CONTAINER_IP=nginx-hello
       - CONTAINER_PORT=80
-      - REMOTE_IP=openssh-server
+      - GATEWAY_IP=openssh-server
+      - REMOTE_IP=*
       - REMOTE_PORT=8080
 
   nginx-hello:
