--- a/examples/docker-compose.yaml
+++ b/examples/docker-compose.yaml
@@ -12,8 +12,8 @@ services:
     environment:
       - SSH_PORT=2222
       - SSH_USER=proxy
-      - CONTAINER_IP=nginx-hello
-      - CONTAINER_PORT=80
+      - LOCAL_IP=nginx-hello
+      - LOCAL_PORT=80
       - GATEWAY_IP=openssh-server
       - REMOTE_IP=*
       - REMOTE_PORT=8080
