Allow use of ssh-agent instead of mounting SSH key

--- a/examples/docker-compose-agent.yaml
+++ b/examples/docker-compose-agent.yaml
@@ -24,5 +24,6 @@ services:
       - SSH_BASTION_HOST=24.342.228.122
       - SSH_USER=dbtunnel
       - SSH_PORT=22
+      - SSH_AUTH_SOCK=/run/host-services/ssh-auth.sock
     volumes:
-      - ~/.ssh/example/dbtunnel:/ssh_key/id_rsa:ro
+      - /run/host-services/ssh-auth.sock:/run/host-services/ssh-auth.sock
