Simplify documentation for ssh-agent forwarding

--- a/examples/docker-compose.yaml
+++ b/examples/docker-compose.yaml
@@ -12,8 +12,7 @@ services:
       - dbtunnel
 
   dbtunnel:
-    build:
-      context: ../
+    image: jujhars13/docker-ssh-tunnel
     restart: always
     expose:
       - "3306/tcp"
